--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   node-app:
-    image: node-app-t1
-    container_name: node-app-container
+    build: .
     environment:
       - PORT=3000
     volumes:
