--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start:dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "parseurl": "^1.3.3"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
