--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start:dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "mongoose": "^6.1.4",
     "parseurl": "^1.3.3"
   },
   "devDependencies": {
